# rag-pipeline

./: .gitignore  README.md  docker-compose.yml
document-processing/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
document-processing-v2/: pom.xml
document-processing-v2/src/main/java/net/samit/document_processing_v2/: DocumentProcessingV2Application.java
document-processing-v2/src/main/java/net/samit/document_processing_v2/api/: ProcessingController.java
document-processing-v2/src/main/java/net/samit/document_processing_v2/config/: AsyncConfig.java  DocProcessingProperties.java  RabbitMqConfig.java
document-processing-v2/src/main/java/net/samit/document_processing_v2/consumer/: FileEventListener.java
document-processing-v2/src/main/java/net/samit/document_processing_v2/etl/: DocumentProcessingService.java  DocumentReaderFactory.java
document-processing-v2/src/main/java/net/samit/document_processing_v2/model/: FileUploadedEvent.java  ProcessingResult.java
document-processing-v2/src/main/resources/: application.yaml
document-processing-v2/src/main/resources/db/: schema.sql
document-processing-v2/src/test/java/net/samit/document_processing_v2/: DocumentProcessingV2ApplicationTests.java  TestDocumentProcessingV2Application.java  TestcontainersConfiguration.java
document-processing-v2/src/test/java/net/samit/document_processing_v2/api/: ProcessingControllerTest.java
document-processing/.github_clone/workflows/: ci.yml
document-processing/app/: __init__.py  main.py
document-processing/app/api/v1/routes/: health.py  process.py
document-processing/app/consumer/: event_consumer.py
document-processing/app/core/: celery_app.py  config.py  logging.py
document-processing/app/models/: domain.py
document-processing/app/parsers/: base.py  docx_parser.py  image_parser.py  pdf_parser.py  text_parser.py
document-processing/app/services/: chunking_service.py  embedding_generic_service.py  embedding_service.py  vector_store_client.py
document-processing/app/tasks/: _deps.py  base_task.py  docx_tasks.py  image_tasks.py  pdf_tasks.py  text_tasks.py
document-processing/app/utils/: mime_router.py
document-processing/k8s/: deployments.yaml
document-processing/scripts/: entrypoint.sh
document-processing/tests/: conftest.py
document-processing/tests/integration/: test_api.py  test_end_to_end.py
document-processing/tests/unit/consumer/: test_event_consumer.py
document-processing/tests/unit/parsers/: test_docx_parser.py  test_image_parser.py  test_pdf_parser.py  test_text_parser.py
document-processing/tests/unit/services/: test_chunking_service.py  test_embedding_service.py  test_mime_router.py
document-processing/tests/unit/tasks/: test_pdf_tasks.py
ingestion-service/: Dockerfile  Dockerfile.jvm  docker-compose.yaml  pom.xml
ingestion-service/src/main/java/dev/samitkumar/ingestion_service/: IngestionServiceApplication.java
ingestion-service/src/main/resources/: application.yaml
ingestion-service/src/test/java/dev/samitkumar/ingestion_service/: ArchiveExtractorTest.java  IngestionServiceApplicationTests.java  TestIngestionServiceApplication.java  TestcontainersConfiguration.java
vector-store/: pom.xml
vector-store/src/main/java/net/samitkumar/vector_store/: VectorStoreApplication.java
vector-store/src/main/resources/: application.yaml
vector-store/src/test/java/net/samitkumar/vector_store/: TestVectorStoreApplication.java  TestcontainersConfiguration.java  VectorStoreApplicationTests.java
(+14 files in other folders)
