[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-processing"
version = "0.1.0"
description = "RAG Chatbot — Document Processing Microservice"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # ── Web framework ─────────────────────────────────────────────────
    "fastapi[standard]>=0.135.3",       # 0.135.3 latest (Apr 2026)
    "uvicorn[standard]>=0.44.0",        # ASGI server

    # ── Task queue ───────────────────────────────────────────────────
    "celery[rabbitmq]>=5.6.3",          # 5.6.3 latest (Mar 2026) — critical memory-leak + security fixes
    "kombu>=5.6.2",                     # Celery messaging library — track celery 5.6.x

    # ── Settings / validation ─────────────────────────────────────────
    "pydantic>=2.12.5",                 # v2 — model_config, field_validator
    "pydantic-settings>=2.7.0",         # BaseSettings with env var support

    # ── Document parsers ──────────────────────────────────────────────
    "pymupdf>=1.27.0",                  # PDF parsing (fitz)
    "python-docx>=1.1.2",              # DOCX parsing
    "pytesseract>=0.3.13",             # OCR (requires Tesseract binary)
    "Pillow>=11.1.0",                  # Image preprocessing for OCR

    # ── Text chunking + embeddings ────────────────────────────────────
    # NOTE: 1.x is a major bump from 0.3.x — RecursiveCharacterTextSplitter
    # class name is unchanged but verify imports if chunking_service.py breaks.
    "langchain-text-splitters>=1.1.1", # RecursiveCharacterTextSplitter
    "tiktoken>=0.9.0",                 # Token counting for chunking

    # ── HTTP client ───────────────────────────────────────────────────
    "httpx>=0.28.1",                   # async + sync HTTP client

    # ── Observability ─────────────────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=25.1.0",               # structured JSON logging

    # ── Utilities ─────────────────────────────────────────────────────
    "tenacity>=9.1.4",                 # retry logic with backoff
    "python-multipart>=0.0.20",        # multipart form parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",                   # AsyncClient for test requests
    "anyio>=4.8.0",
    "factory-boy>=3.3.1",
    "ruff>=0.9.0",                     # linting + formatting
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "celery[pytest]>=5.6.3",           # Celery test helpers
    "flower>=2.0.0",                    # Celery web monitoring UI
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff (replaces flake8 + isort + black) ────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
